// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expense summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totaling to 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render expense summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    10
     
    expenses
     totaling to 
    $0.00
  </h1>
</div>
`;
